# Yi-Hack-Player

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  YI-Hack-Player.pro  YI-Hack-Player_pt_BR.ts
data/: resources.qrc
src/: camera.cpp  camera.h  cameradao.cpp  cameradao.h  camerainfowidget.cpp  camerainfowidget.h  camerainfowidget.ui  database.cpp  database.h  ftpdirswidget.cpp  ftpdirswidget.h  ftpdirswidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  noteditabledelegate.h
